# C-practice

./: CMakeLists.txt  main.cpp  practice_1.cpp  practice_10.cpp  practice_11.cpp  practice_12.cpp  practice_13.cpp  practice_2.cpp  practice_3.cpp  practice_4.cpp  practice_5.cpp  practice_6.cpp  practice_7.cpp  practice_8.cpp  practice_9.cpp
