cmake_minimum_required(VERSION 3.23)
project(calprograms)

set(CMAKE_CXX_STANDARD 14)

add_executable(calprograms main.cpp)
add_executable(new1 practice_1.cpp)
add_executable(new2 practice_2.cpp)
add_executable(new3 practice_3.cpp)
add_executable(new4 practice_4.cpp)
add_executable(new5 practice_5.cpp)
add_executable(new6 practice_6.cpp)
add_executable(new7 practice_7.cpp)
add_executable(new8 practice_8.cpp)
add_executable(new9 practice_9.cpp)
add_executable(new10 practice_10.cpp)
add_executable(new11 practice_11.cpp)
add_executable(new12 practice_12.cpp)
add_executable(new13 practice_13.cpp)